<resources>
    <string name="app_name">Instagram</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_comment">Add a comment…</string>
    <string name="label_likes">likes</string>
    <string name="title_change_image">Change Image</string>
    <string name="logout_btn_txt">Logout</string>
    <string name="title_or">OR</string>
    <string name="privacy_policy">By signing up, you agree to our <b>Terms \n &amp; Privacy Policy.</b></string>
    <string name="login_have_an_account_txt">Have an account?</string>
    <string name="login_txt"><font color="#3997f2"><b>Log in</b></font></string>
    <string name="sign_up_with_facebook">Sign Up With Facebook</string>
    <string name="sign_up_dec">Sign up to see photos and videos from your \n friends.</string>
    <string name="get_help_with_logging_in">Get help with logging in.</string>
    <string name="forgotten_your_login_details">Forgotten your login details <font color="#3997f2"><b>Get help with logging in.</b></font></string>
    <string name="don_t_have_an_account_txt">Don\'t have an account? </string>
    <string name="sign_up_txt"><font color="#3997f2"><b>Sign Up</b></font></string>
    <string name="hint_username">username</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="delete_account_btn">Delete Account</string>
    <string name="title_posts">Posts</string>
    <string name="title_followers">Followers</string>
    <string name="zero_followers_txt">0</string>
    <string name="title_following">Following</string>
    <string name="bio_dec">Bio</string>
    <string name="edit_profile_btn_txt">Edit Profile</string>
    <string name="login_btn_txt">Log in</string>
    <string name="signup_btn_txt">SignUp</string>
    <string name="hint_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="error_empty_full_name">Full name required</string>
    <string name="error_empty_username">username required</string>
    <string name="error_empty_email">Email id required</string>
    <string name="error_empty_password">Password required</string>
    <string name="context_text">its_me_guru_reddy just shared a post</string>
    <string name="context_title">Instagram</string>
    <string name="camerax">CameraX</string>
    <string name="camera_x">Camera X</string>
    <string name="cancel">Cancel</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="record_video">Record Video</string>
    <string name="take_photo">Take Photo</string>
    <string name="reels">Reels</string>
    <string name="videos_title">its_me_guru_reddy</string>
    <string name="video_url">http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4</string>
    <string name="img_url">https://ca.slack-edge.com/T02TLUWLZ-U040DBX2XUG-0a35a4f5f560-512</string>
    <string name="video_likes_count">600k</string>
    <string name="video_comment_count">22k</string>
    <string name="video_des">Forest fun</string>
    <string name="video_error_message">Can\'t play this video</string>
    <string name="add_btn">Add</string>
</resources>