<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/hint_search" />

    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/add"
        android:title="@string/title_posts"
         />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/heart"
        android:title="@string/title_notifications"
         />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile"
         />


</menu>